; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/libsas/extr_sas_event.c_sas_disable_revalidation.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/libsas/extr_sas_event.c_sas_disable_revalidation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sas_ha_struct = type { i32, i32 }

@SAS_HA_ATA_EH_ACTIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sas_disable_revalidation(%struct.sas_ha_struct* %0) #0 {
  %2 = alloca %struct.sas_ha_struct*, align 8
  store %struct.sas_ha_struct* %0, %struct.sas_ha_struct** %2, align 8
  %3 = load %struct.sas_ha_struct*, %struct.sas_ha_struct** %2, align 8
  %4 = getelementptr inbounds %struct.sas_ha_struct, %struct.sas_ha_struct* %3, i32 0, i32 0
  %5 = call i32 @mutex_lock(i32* %4)
  %6 = load i32, i32* @SAS_HA_ATA_EH_ACTIVE, align 4
  %7 = load %struct.sas_ha_struct*, %struct.sas_ha_struct** %2, align 8
  %8 = getelementptr inbounds %struct.sas_ha_struct, %struct.sas_ha_struct* %7, i32 0, i32 1
  %9 = call i32 @set_bit(i32 %6, i32* %8)
  %10 = load %struct.sas_ha_struct*, %struct.sas_ha_struct** %2, align 8
  %11 = getelementptr inbounds %struct.sas_ha_struct, %struct.sas_ha_struct* %10, i32 0, i32 0
  %12 = call i32 @mutex_unlock(i32* %11)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
